<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>emlid_reach_ros2</name>
  <version>1.0.2</version>
  <description>
    ROS package supporting EMLID Reach series GPS devices.
    Parses NMEA strings from EMLID Reach devices and publishes topics including NMEA messages,
    NavSatFix, TimeReference and Twist.
  </description>
  <url>https://github.com/tmxkn1/emlid_reach_ros</url>

  <author email="anthony.jiang.github@outlook.com">Zhengyi Jiang</author>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>serial</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nmea_msgs</depend>

<!--   <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nmea_msgs</run_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>